# PythonS4ESEO_2025_2026

./: .gitignore  README.md  example_graph.json  pyproject.toml
docs/: GUIDE_GIT.md  SUJET.md
src/: __init__.py
src/app/: __init__.py  cli.py
src/app/core/: __init__.py  algorithms.py  graph.py  io.py
src/app/ui/: __init__.py  app.py  controller.py  render.py
tests/: README.md  __init__.py  conftest.py  test_algorithms_bfs.py  test_algorithms_dfs.py  test_graph.py  test_io.py  test_problems.py
