[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-explorer"
version = "0.1.0"
description = "Explorateur de graphes interactif - Projet Python S4 ESEO"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Étudiants ESEO S4", email = ""},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "palier_a: Palier A - Graphe de base (séance 2)",
    "palier_b: Palier B - DFS (séance 3)",
    "palier_c: Palier C - BFS (séance 4)",
    "palier_d: Palier D - Problèmes sur graphes (séance 5)",
    "palier_e: Palier E - Import/Export (séance 7)",
    "palier_f: Palier F - Interface graphique (séances 6-8)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/ui/*",  # UI non testée automatiquement
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
